[workspace]

members = [
    "no-std-smoke",
    "std-smoke",
    "tailcall",
    "tailcall-impl",
]

[workspace.package]
description = "Stack-safe tail calls on stable Rust"
documentation = "https://docs.rs/tailcall"
repository = "https://github.com/alecdotninja/tailcall"
readme = "README.md"
keywords = ["recursion", "tail", "tailcall", "become"]
categories = ["algorithms", "no-std"]
license = "MIT OR Apache-2.0"
authors = ["Alec Larsen <hello@alec.ninja>"]
edition = "2018"

# ⚠️ Warning! When updating the version here, you must also update the version
# in the `workspace.dependencies` section of this file for the `tailcall` and
# `tailcall-impl` crates.
version = "2.1.0"

[workspace.dependencies]
tailcall = { path = "tailcall", version = "2.1.0" }
tailcall-impl = { path = "tailcall-impl", version = "2.1.0" }
