[workspace]
resolver = "2"

members = [
    "no-std-integration",
    "std-integration",
    "tailcall",
    "tailcall-proc-macro",
]

[workspace.package]
description = "Stack-safe tail calls on stable Rust"
documentation = "https://docs.rs/tailcall"
repository = "https://github.com/alecdotninja/tailcall"
readme = "README.md"
keywords = ["recursion", "tail", "tailcall", "become"]
categories = ["algorithms", "no-std"]
license = "MIT OR Apache-2.0"
authors = ["Alec Larsen <hello@alec.ninja>"]
edition = "2021"
