[package]
name = "tailcall-impl"
description = "The procedural macro implementation for the tailcall crate"
documentation = "https://docs.rs/tailcall"
repository = "https://github.com/alecdotninja/tailcall"
keywords = ["recursion", "tail", "tailcall", "become"]
categories = ["algorithms", "no-std"]
license = "MIT OR Apache-2.0"
authors = ["Alec Larsen <hello@alec.ninja>"]
version = "0.1.5"
edition = "2018"

[badges]
travis-ci = { repository = "alecdotninja/tailcall" }

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "fold"] }

[lib]
proc-macro = true
