[package]
name = "tailcall-impl"
description = "The procedural macro implementation for the tailcall crate"
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
authors.workspace = true
version = "2.2.1"
edition.workspace = true

[dependencies]
proc-macro2 = "~1"
quote = "~1"
syn = { version = "2.0.117", features = ["full", "fold", "visit"] }

[lib]
name = "tailcall_proc_macro"
proc-macro = true
