[package]
name = "tailcall"
description.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
authors.workspace = true
version = "2.2.1"
edition.workspace = true

[dependencies]
tailcall-impl = { path = "../tailcall-impl", version = "2.2.1" }
