[package]
name = "tailcall"
description.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
authors.workspace = true
version = "2.2.2"
edition.workspace = true

[dependencies]
tailcall_proc_macro = { package = "tailcall-impl", path = "../tailcall-proc-macro", version = "2.2.2" }
