[package]
name = "tailcall"
description.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
authors.workspace = true
version = "2.3.0"
edition.workspace = true

[dependencies]
tailcall_proc_macro = { package = "tailcall-impl", path = "../tailcall-proc-macro", version = "2.3.0" }

[features]
default = []
at-least-inline-captures-32 = []
at-least-inline-captures-48 = ["at-least-inline-captures-32"]
